<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/bottomMenu"
        style="?android:attr/buttonStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="8dp"
        android:background="@color/darkergreeny"
        android:orientation="horizontal"
        android:weightSum="3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">

        <Button
            android:id="@+id/homeButton"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawableTop="@drawable/ic_home_black_24dp"
            android:gravity="center"
            android:onClick="homeButtonPressed"
            android:text="@string/homeButton"
            android:textColor="@color/white"
            android:textSize="13sp" />

        <Button
            android:id="@+id/cameraButton"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawableTop="@drawable/ic_camera_alt_black_24dp"
            android:gravity="center"
            android:onClick="sellButtonPressed"
            android:text="@string/cameraButton"
            android:textSize="13sp"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/browseButton"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawableTop="@drawable/ic_folder_black_24dp"
            android:gravity="center"
            android:onClick="browseButtonPressed"
            android:text="@string/browseButton"
            android:textSize="13sp"
            android:textColor="@color/white" />
    </LinearLayout>

</android.support.constraint.ConstraintLayout>